--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ Bin
 .project
 .settings
 .DS_Store
-/festiplan/static/bootstrap-4.6.2-dist/
+/festiplan/static/bootstrap-5.3.2-dist/
 /festiplan/static/fontawesome-free-6.2.1-web/
 /bin/
 vendor
+/.idea
